test/e2e/invalid/arithmetic.mylang
{
define imut x of int16 = 1;
define imut y of int16 = x + 3;
print(y);
}
